...
                                <color key="backgroundColor" red="0.76470588240000004" green="0.12549019610000001" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="141" id="kY1-OW-itT"/>
                                    <constraint firstAttribute="height" constant="30" id="tjk-36-Go2"/>
                                </constraints>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Navigation Example"/>
                                <connections>
                                    <action selector="navigationExampleButtonClicked:" destination="XI3-Hc-Dgg" eventType="touchUpInside" id="spO-V8-Eye"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Navigation has not been completed" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WkZ-XW-bFQ">
                                <rect key="frame" x="77.5" y="155" width="220" height="41"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="220" id="hDd-Vw-lPe"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
