...
                                <color key="backgroundColor" red="0.76470588240000004" green="0.12549019610000001" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="L0T-Pr-v5b"/>
                                    <constraint firstAttribute="width" constant="176" id="eX8-3A-xJf"/>
                                </constraints>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Navigate to final screen"/>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTi-cv-YGJ">
                                <rect key="frame" x="70.5" y="389" width="234" height="20.5"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="234" id="1eF-6a-dl1"/>
                                </constraints>
...
